# crypto_backtest

./: .gitignore  CMakeLists.txt  README.md
data/: BTCUSDT_3600000_1639191600000_1686646800000.csv  test.txt
include/: backtest.h  csv.h  klines.h  list.h  my.h  strategy.h
lib/list/: add_elem.c  create_list.c  remove_elem.c
src/: average.c  main.c  print_exit.c  round.c  split.c
src/backtest/: create_random_ids.c  launch_backtest.c  new_position.c  replace_sizes.c
src/csv/: file_size.c  get_columns.c  init_csv.c  open_csv.c  read_csv_line.c
src/file/: remove_newline.c  skip_file_line.c
src/indicators/: create_rsi.c  init_indicator.c
src/klines/: get_close.c  get_end.c  get_high.c  get_indicator.c  get_low.c  get_open.c  get_start.c  get_volume.c
strategies/: 0_MAIN.c  README.md  strategy_1.c  strategy_2.c
